# ChangeLog for sys-devel/gcc
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-devel/cvs-repo/gentoo-x86/sys-devel/gcc/ChangeLog,v 1.402 2005/05/08 23:53:14 halcy0n Exp $

*gcc-4.0.1_beta20050507 (08 May 2005)

  08 May 2005; Mark Loeser <halcy0n@gentoo.org>
  -gcc-4.0.0_beta20050416.ebuild, +gcc-4.0.1_beta20050507.ebuild:
  Version bump to the newest GCC4 snapshot.

  23 Apr 2005; Joshua Kinard <kumba@gentoo.org>
  +files/3.4.2/gcc-3.4.2-mips-ip28_cache_barriers-v2.patch,
  gcc-3.4.3-r1.ebuild, gcc-3.4.3.20050110-r1.ebuild,
  gcc-3.4.3.20050110-r2.ebuild:
  Update the gcc-3.4.3 ebuilds to use a newer IP28 cache barrier patch. Won't
  affect mainstream Mips systems.

*gcc-4.0.0 (21 Apr 2005)

  21 Apr 2005; Jeremy Huddleston <eradicator@gentoo.org> +gcc-4.0.0.ebuild:
  Adding ebuild for gcc-4.0.0 release.  This doesn't mean it's supported yet!

*gcc-4.0.0_beta20050416 (17 Apr 2005)

  17 Apr 2005; Mark Loeser <halcy0n@gentoo.org>
  -gcc-4.0.0_beta20050409.ebuild, +gcc-4.0.0_beta20050416.ebuild:
  Bump to newest weekly snapshot.

*gcc-4.0.0_beta20050409 (12 Apr 2005)

  12 Apr 2005; Mark Loeser <halcy0n@gentoo.org>
  -gcc-4.0.0_beta20050402.ebuild, +gcc-4.0.0_beta20050409.ebuild:
  Updating GCC4 ebuild to the newest snapshot

*gcc-3.3.5.20050130-r2 (08 Apr 2005)

  08 Apr 2005; Mike Frysinger <vapier@gentoo.org>
  +gcc-3.3.5.20050130-r2.ebuild:
  Add a patch from Debian and the patch to prevent gcc from unlinking /dev/null.

*gcc-3.4.3.20050110-r2 (08 Apr 2005)

  08 Apr 2005; Mike Frysinger <vapier@gentoo.org>
  +gcc-3.4.3.20050110-r2.ebuild:
  Add fix for PR/16625 from upstream #88022 by Ed Catmur. Patch to prevent
  /dev/null from being deleted #79836 by David Wood. Also add a patch for arm
  PR/16201 and a patch from Debian for m68k.

*gcc-4.0.0_beta20050402 (03 Apr 2005)

  03 Apr 2005; Mark Loeser <halcy0n@gentoo.org>
  -gcc-4.0.0_beta20050326.ebuild, +gcc-4.0.0_beta20050402.ebuild: