@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-devel/cvs-repo/gentoo-x86/sys-devel/gcc/Attic/gcc-4.0.1_beta20050507.ebuild,v 1.1 2005/05/08 23:53:15 halcy0n Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-devel/cvs-repo/gentoo-x86/sys-devel/gcc/Attic/gcc-4.0.1_beta20050507.ebuild,v 1.2 2005/05/10 18:10:37 azarah Exp $
 
 ETYPE="gcc-compiler"
 
@@ -43,6 +43,15 @@ DEPEND="${RDEPEND}
 
 PDEPEND="sys-devel/gcc-config
 	!nocxx? ( !n32? ( !n64? ( !uclibc? ( !build? ( sys-libs/libstdc++-v3 ) ) ) ) )"
+
+src_unpack() {
+	gcc_src_unpack
+
+	cd ${S}
+	for x in $(cat /tmp/gcc4/list2); do
+		[[ -f /tmp/gcc4/${x} ]] && epatch "/tmp/gcc4/${x}"
+	done
+}
 
 pkg_postinst() {
 	toolchain_pkg_postinst
